--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ ipywidgets==7.5.1
 isort==4.3.21
 jedi==0.16.0
 Jinja2==2.11.1
+joblib==0.14.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.2
@@ -59,10 +60,12 @@ pyzmq==19.0.0
 qtconsole==4.7.2
 QtPy==1.9.0
 requests==2.23.0
+scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.10.0
 Send2Trash==1.5.0
 six==1.14.0
+sklearn==0.0
 statsmodels==0.11.1
 terminado==0.8.3
 testpath==0.4.4
