--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bleach==3.1.4
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+Cython==0.29.16
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -46,6 +47,7 @@ patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 ply==3.11
+pmdarima==1.5.3
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
