--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.0
+arch==4.13
 astroid==2.3.3
 attrs==19.3.0
 backcall==0.1.0
@@ -50,6 +51,7 @@ ply==3.11
 pmdarima==1.5.3
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
+property-cached==1.6.4
 ptyprocess==0.6.0
 Pygments==2.6.1
 pylint==2.4.4
