--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ jupyterthemes==0.20.0
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 lesscpy==0.14.0
+lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mccabe==0.6.1
@@ -42,6 +43,7 @@ nbformat==5.0.5
 notebook==6.0.3
 numpy==1.18.2
 pandas==1.0.3
+pandas-datareader==0.8.1
 pandocfilters==1.4.2
 parso==0.6.2
 patsy==0.5.1
